--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ geopy==2.0.0
 google==3.0.0
 google-auth==1.20.1
 google-oauth==1.0.1
+djangorestframework==3.11.1
+validate-email==1.3
 idna==2.10
 imageio==2.9.0
 imageio-ffmpeg==0.4.2
