--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ beautifulsoup4==4.9.1
 cachetools==4.1.1
 certifi==2020.6.20
 cffi==1.14.4
+channels==3.0.3
 chardet==3.0.4
 cryptography==3.0
 decorator==4.4.2
