--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-asgiref==3.2.7
+asgiref
 beautifulsoup4==4.9.1
 cachetools==4.1.1
 certifi==2020.6.20
 cffi==1.14.4
 chardet==3.0.4
-cryptography==3.0
+cryptography
 decorator==4.4.2
 dj-database-url==0.5.0
 Django==3.0.5
@@ -25,15 +25,16 @@ idna==2.10
 imageio==2.9.0
 imageio-ffmpeg==0.4.2
 moviepy==1.0.3
-mysqlclient==1.4.6
+mysqlclient
 numpy==1.19.3
 Pillow==7.1.2
 proglog==0.1.9
-psycopg2==2.8.4
+psycopg2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
 pymongo==3.11.0
+pymysql
 pyOpenSSL==19.1.0
 PyPDF2==1.26.0
 python-dateutil==2.8.1
