--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-asgiref
+asgiref==3.2.10
 beautifulsoup4==4.9.1
 cachetools==4.1.1
 certifi==2020.6.20
 cffi==1.14.4
-channels
+channels==3.0.3
 chardet==3.0.4
-cryptography
+cryptography==3.0
 decorator==4.4.2
 dj-database-url==0.5.0
 Django==3.0.5
@@ -26,11 +26,11 @@ idna==2.10
 imageio==2.9.0
 imageio-ffmpeg==0.4.2
 moviepy==1.0.3
-mysqlclient
+mysqlclient==1.4.6
 numpy==1.19.3
 Pillow==7.1.2
 proglog==0.1.9
-psycopg2
+psycopg2==2.8.4
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
