--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ cffi==1.14.4
 channels==3.0.3
 chardet==3.0.4
 colorama==0.4.4
-cryptography==3.0
+cryptography
 decorator==4.4.2
 defusedxml==0.6.0
 diff-match-patch==20200713
