major frontend and backend changes

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ migrations
 tutorsearch/__pycache__
 db.sqlite3
 media
+.vscode
 
 # Created by https://www.toptal.com/developers/gitignore/api/django,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=django,python
