--- a/requirements.txt
+++ b/requirements.txt
@@ -1,81 +1,67 @@
-asgiref==3.3.1
-autopep8==1.5.5
-beautifulsoup4==4.9.1
-cachetools==4.1.1
-certifi==2020.11.8
-cffi==1.14.4
-channels==3.0.3
-chardet==3.0.4
-colorama==0.4.4
-cryptography
-decorator==4.4.2
-defusedxml==0.6.0
-diff-match-patch==20200713
-dj-database-url==0.5.0
-django-admin-rangefilter==0.6.3
-django-ckeditor==6.0.0
-django-cleanup==5.1.0
+arabic-reshaper==3.0.0
+asgiref==3.9.2
+asn1crypto==1.5.1
+certifi==2025.8.3
+cffi==2.0.0
+channels==4.3.1
+charset-normalizer==3.4.3
+colorama==0.4.6
+cryptography==46.0.1
+cssselect2==0.8.0
+diff-match-patch==20241021
+dj-database-url==3.0.1
+Django==5.2.6
+django-admin-rangefilter==0.13.3
+django-ckeditor-5==0.2.18
+django-cleanup==9.0.0
 django-heroku==0.3.1
-django-import-export==2.4.0
-django-js-asset==1.2.2
-django-templated-mail==1.1.1
-Django==3.1.3
-djangorestframework==3.11.1
-djangorestframework-api-key==2.0.0
-djangorestframework-simplejwt==4.7.2
-djoser==2.0.5
-et-xmlfile==1.0.1
-geographiclib==1.50
-geopy==2.0.0
-google-auth==1.20.1
-google-oauth==1.0.1
-google==3.0.0
-gunicorn==20.0.4
+django-import-export==4.3.10
+django-js-asset==3.1.2
+djangorestframework==3.16.1
+djangorestframework-api-key==3.1.0
+djangorestframework_simplejwt==5.5.1
+dnspython==2.8.0
+freetype-py==2.5.1
+geographiclib==2.1
+geopy==2.4.1
 html5lib==1.1
-idna==2.10
-imageio-ffmpeg==0.4.2
-imageio==2.9.0
-jdcal==1.4.1
-MarkupPy==1.14
-moviepy==1.0.3
-mysqlclient==1.4.6
-numpy==1.19.3
-odfpy==1.4.1
-openpyxl==3.0.5
-Pillow==8.0.1
-proglog==0.1.9
-psycopg2==2.8.6
-pyasn1-modules==0.2.8
-pyasn1==0.4.8
-pycodestyle==2.6.0
-pycparser==2.20
-pycryptodome==3.9.9
-pymongo==3.11.0
-PyMySQL==1.0.2
-pyOpenSSL==19.1.0
-PyPDF2==1.26.0
-PyQRCode==1.2.1
-python-dateutil==2.8.1
-python-decouple==3.4
-pytz==2020.4
-PyYAML==5.3.1
-qrcode==6.1
-razorpay==1.2.0
-reportlab==3.5.55
-requests==2.25.0
-rsa==4.6
-s3transfer==0.3.4
-six==1.15.0
-soupsieve==2.0.1
-sqlparse==0.4.1
-tablib==2.0.0
-toml==0.10.2
-tqdm==4.48.2
-urllib3==1.26.2
-validate-email==1.3
+idna==3.10
+lxml==6.0.2
+Naked==0.1.32
+oscrypto==1.3.0
+packaging==25.0
+pillow==11.3.0
+psycopg2==2.9.10
+pycairo==1.28.0
+pycparser==2.23
+pycryptodome==3.23.0
+pyHanko==0.31.0
+pyhanko-certvalidator==0.29.0
+PyJWT==2.10.1
+pymongo==4.15.1
+PyMySQL==1.1.2
+pypdf==6.1.0
+PyPDF2==3.0.1
+python-bidi==0.6.6
+python-dateutil==2.9.0.post0
+python-decouple==3.8
+pytz==2025.2
+PyYAML==6.0.3
+qrcode==8.2
+razorpay==2.0.0
+reportlab==4.4.4
+requests==2.32.5
+rlPyCairo==0.4.0
+shellescape==3.8.1
+six==1.17.0
+sqlparse==0.5.3
+svglib==1.6.0
+tablib==3.8.0
+tinycss2==1.4.0
+tzdata==2025.2
+tzlocal==5.3.1
+uritools==5.0.0
+urllib3==2.5.0
 webencodings==0.5.1
-whitenoise==5.2.0
-wheel
-xhtml2pdf==0.2.4
-xlrd==1.2.0
-xlwt==1.3.0
+whitenoise==6.11.0
+xhtml2pdf==0.2.17
